# nix-config

./: .gitignore  Makefile  README.md  darter.nix  flake.nix  install.sh  oryx.nix  setup.sh  switch  update.sh
autostart/.config/autostart/: shepherd.desktop  syncthing.desktop
bash/: .bash_profile  .bashrc
cron.daily/: backup
darterpro/: configuration.nix  hardware-configuration.nix  home.nix
darterpro-nixpkgs/: home.nix
darterpro-nixpkgs/.config/nixpkgs/: home.nix
doom/.doom.d/: config.el  custom.el  init.el  packages.el
fresh-doom/.doom.d/: config.el  custom.el  init.el
git/: .gitconfig  .gitignore_global
home/: artem.nix  hackeryarn.nix  home.nix
home/.config/nixpkgs/: home.nix
home/.config/nixpkgs/programs/xmonad/xmonad-hackeryarn/: .envrc  .gitignore  CHANGELOG.md  LICENSE  default.nix  shell.nix  xmonad-hackeryarn.cabal
home/.config/nixpkgs/programs/xmonad/xmonad-hackeryarn/app/: Main.hs
home/display/: edp.nix  hdmi.nix
home/programs/: default.nix
home/scripts/: switcher.nix
home/services/: default.nix
home/themes/: default.nix
kde/.config/: kglobalshortcutsrc  kwinrc
lein/.lein/: profiles.clj
lisp/: Makefile  batchcolor.lisp  build-manual.sh  clean-backups.lisp
nixos/: shared.nix  systemPackages.nix  tmux.nix
nixos/wm/: kde.nix  xmonad.nix
oryxpro/: configuration.nix  hardware-configuration.nix
outputs/: home-conf.nix  nixos-conf.nix
stumpwm/.stumpwm.d/: init.lisp
system/: configuration.nix  shared.nix
system/services/: btrbk.nix  guix.nix
system/wm/: gnome.nix  sway.nix
tmux/: .tmux.conf
zsh/: .zshrc
(+83 files in other folders)
