cabal-version:      2.4
name:               xmonad-hackeryarn
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             hackeryarn
maintainer:         hackeryarn
extra-source-files: CHANGELOG.md

executable xmonad-hackeryarn
    main-is:          Main.hs
    build-depends:    base
                    , xmonad
                    , xmonad-contrib
                    , xmonad-extras
                    , containers
                    , utf8-string
                    , dbus
    hs-source-dirs:   app
    default-language: Haskell2010
